scripts/e2e/cmd/runner/testdata/extensions-v1beta1/one-namespace-one-ingress/ssl-e2e-redirect/app.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-cm
data:
  default.conf: |-
    server {
        listen 80 default_server;
        listen 443 ssl;
        root /usr/share/nginx/html;
        index index.html;
        ssl_certificate /etc/nginx/ssl/tls.crt;
        ssl_certificate_key /etc/nginx/ssl/tls.key;
        location / {
                try_files $uri $uri/ =404;
        }
    }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-redirect-deployment
spec:
  selector:
    matchLabels:
      app: ssl-redirect
  replicas: 2
  template:
    metadata:
      labels:
        app: ssl-redirect
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Always
          image: nginx:latest
          ports:
            - containerPort: 443
          volumeMounts:
          - mountPath: /etc/nginx/ssl
            name: secret-volume
          - mountPath: /etc/nginx/conf.d
            name: configmap-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: testsecret-tls
      - name: configmap-volume
        configMap:
          name: nginx-cm       
---
apiVersion: v1
kind: Service
metadata:
  name: ssl-redirect-service
spec:
  selector:
    app: ssl-redirect
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssl-redirect-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-hostname: "test"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "test"
    appgw.ingress.kubernetes.io/waf-policy-for-path : "/subscriptions/2ce9a29e-219e-422b-b9f8-5c5e54d5439e/resourceGroups/agic-e2e/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/waf-policy"
spec:
  tls:
    - secretName: testsecret-tls
  rules:
    - http:
        paths:
        - path: /index.html
          backend:
            serviceName: ssl-redirect-service
            servicePort: 443
        - path: /*
          backend:
            serviceName: ssl-redirect-service
            servicePort: 443
---
apiVersion: v1
kind: Secret
metadata:
  name: testsecret-tls
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJGekNCdndJVVlBVGFDc0l1T0xrbzYrYTdKOGNqSUtJdTFnRXdDZ1lJS29aSXpqMEVBd0l3RHpFTk1Bc0cKQTFVRUF3d0VkR1Z6ZERBZUZ3MHlNVEEzTVRRd05ESTJNemxhRncweU16QTNNRFF3TkRJMk16bGFNQTh4RFRBTApCZ05WQkFNTUJIUmxjM1F3V1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVJTd2dMdUtzRWpoN2NhCkNJcUdDKy82by9XMzdocE1idmFZb2h3QXBRczZBYnd5L0R6Y0FSY29vYnROdGhwN1UxcVkrU0F5bk9mNlJyYS8KbXI4QWQ4YlFNQW9HQ0NxR1NNNDlCQU1DQTBjQU1FUUNJQVFGUUNlUENuK1liQ1RuNnIxdzZFdmNpdVdVRGhGNgovOFluakdOQkN5MmZBa [...]
  tls.key: LS0tLS1CRUdJTiBFQyBQQVJBTUVURVJTLS0tLS0KQmdncWhrak9QUU1CQnc9PQotLS0tLUVORCBFQyBQQVJBTUVURVJTLS0tLS0KLS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUw4cytYYkZGQ1ArTmZWOXZKNGJ0ckVRcEVvMEVmUEREY3lsK080OU1IZmtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFVXNJQzdpckJJNGUzR2dpS2hndnYrcVAxdCs0YVRHNzJtS0ljQUtVTE9nRzhNdnc4M0FFWApLS0c3VGJZYWUxTmFtUGtnTXB6bitrYTJ2NXEvQUhmRzBBPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
