scripts/e2e/cmd/runner/testdata/extensions-v1beta1/one-namespace-one-ingress/ssl-e2e-redirect/probe-hostname-good.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssl-redirect-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-hostname: "test"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "test"
    appgw.ingress.kubernetes.io/waf-policy-for-path: "/subscriptions/db308457-7e8c-44cc-a8a7-c6d7daee414d/resourceGroups/seanjeffrey-bug-planet/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/WAF-POLICY"
spec:
  tls:
    - secretName: testsecret-tls
  rules:
    - http:
        paths:
          - path: /index.html
            backend:
              serviceName: ssl-redirect-service
              servicePort: 443
          - path: /*
            backend:
              serviceName: ssl-redirect-service
              servicePort: 443
